Fix for horizontal scrolling bug.

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -254,6 +254,7 @@ header {
 }
 .main-content {
     background-color: @bg_page;
+    overflow: hidden;
     padding: 20px;
 }
 .main-content .row {
